# Automobile-Senors-on-Knowledge-Graphs

./: .env.sample  .gitignore  README.md  pyproject.toml  setup.md
data/: bus_ontology.ttl  sensors_with_bus.ttl
docs/: bus_ontology222.ttl  data_description.md  ontology.md
queries/: bus_ontology_basics.sparql  graph_view.cypher  reasoning_examples.sparql  sensor_bus_connections.cypher  sensors_basics.sparql  sensors_intermediate.sparql  sensors_with_bus.cypher
scripts/: neo4j_docker_compose.yaml  run_all.sh
src/kg_sensors/: __init__.py  cli.py  data_generator.py  exporters.py  neo4j_loader.py  nx_convert.py  rag_demo.py  rdf_utils.py  viz_plotly.py
src/kg_sensors/cypher/: load_from_csv.cypher
tests/: test_queries.py  test_rdf_shapes.py
