[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-car-sensors"
version = "0.1.0"
description = "A project to learn Knowledge Graphs with car sensor data using RDF, SPARQL, Neo4j, and NetworkX."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Gemini Data Engineer", email = "gemini@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Education",
]
dependencies = [
    "rdflib>=7.0.0",
    "networkx>=3.2",
    "plotly>=5.18.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "pandas>=2.1.0",
    "neo4j>=5.14.0",
    "requests>=2.31.0",
    "pydot", # for networkx viz if graphviz is installed
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.6",
]

[project.scripts]
kg-sensors = "kg_sensors.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
